vlib/v/checker/tests/lock_already_locked.out
vlib/v/checker/tests/lock_already_locked.vv:11:3: error: nested `lock`/`rlock` not allowed
    9 |     }
   10 |     lock a {
   11 |         rlock a {
      |         ~~~~~
   12 |             a.x++
   13 |         }
vlib/v/checker/tests/lock_already_locked.vv:12:4: error: a has an `rlock` but needs a `lock`
   10 |     lock a {
   11 |         rlock a {
   12 |             a.x++
      |             ^
   13 |         }
   14 |     }
vlib/v/checker/tests/lock_already_locked.vv:15:10: error: `a` is `shared` and must be `rlock`ed or `lock`ed to be used as non-mut argument to print
   13 |         }
   14 |     }
   15 |     println(a.x)
      |             ^
   16 | }
